@@ -14,10 +14,22 @@ Fri Dec 21 01:17:57 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
 
 	* lib/mkmf.rb: no need to mkdir $(libdir)
 
+Thu Dec 20 13:51:52 2001  K.Kosako  <kosako@sofnec.co.jp>
+
+	* variable.c (rb_cvar_set): add frozen class/module check.
+
+	* variable.c (rb_cvar_declare): add frozen class/module check.
+
 Thu Dec 20 10:37:32 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
 
 	* intern.h: added prototypes: rb_cv_set(), rb_cv_get(),
 	  rb_define_class_variable()
+
+Thu Dec 20 01:01:50 2001  takuma ozawa  <metal@mine.ne.jp>
+
+	* re.c (match_to_a): should propagate taint.
+
+	* re.c (rb_reg_s_quote): ditto.
 
 Wed Dec 19 14:05:00 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
